[FIX] mobile: fixed table wrap toggle with multiple tables on same page

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -1764,62 +1764,62 @@ td.url {
   .table-expand-toggle {
     display: none; }
 
-  .toggle-table {
+  .toggle-table-wrap {
     width: 100%;
     text-align: right; }
-    .toggle-table .btn-link {
-      padding-top: 0;
-      padding-bottom: 0;
+    .toggle-table-wrap .btn-link {
+      padding: 0;
+      padding-left: 0.75rem;
       font-weight: 600;
       font-size: 1.8em;
       text-decoration: none !important; }
 
-  .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) thead th:not(.selectall), .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody th:not(.selectall) {
-    position: absolute;
-    top: -9999px;
-    left: -9999px; }
-    .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) thead tr {
-      display: block;
-      padding: 0.5rem 0 0;
-      background-color: rgba(0, 0, 0, 0.05); }
-    .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody tr {
-      display: block;
-      border-bottom: 1px solid #dee2e6; }
-      .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody tr:not(:nth-child(1)) {
-        padding: 0.5rem 0; }
-      .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody > tr.active {
-        display: none; }
-      .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody td {
+  .tiki #col1 .table-responsive .form-check-input {
+    position: static;
+    margin-left: 0; }
+    .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) thead th:not(.selectall), .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody th:not(.selectall) {
+      position: absolute;
+      top: -9999px;
+      left: -9999px; }
+      .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) thead tr {
         display: block;
-        padding: 0.25rem 0.75rem 0.5rem;
-        border-top: none;
-        text-align: left !important;
-        position: relative;
-        word-break: break-word; }
-        .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody td:after {
+        padding: 0.5rem 0 0;
+        background-color: rgba(0, 0, 0, 0.05); }
+      .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody tr {
+        display: block;
+        border-bottom: 1px solid #dee2e6; }
+        .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody tr:not(:nth-child(1)) {
+          padding: 0.5rem 0; }
+        .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody > tr.active {
+          display: none; }
+        .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody td {
           display: block;
-          clear: both;
-          content: ""; }
-        .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody td.checkbox-cell {
-          width: auto; }
-      .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody td.checkall {
-        position: absolute; }
-      .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody td.checkmargin {
-        margin-left: 40px; }
-      .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody .header {
-        display: block !important;
-        font-weight: bold; }
-      .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody .hidecell {
-        display: none; }
-      .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody .float-right {
-        float: none !important; }
-      .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody .form-check-input {
-        margin: 5px 0 0; }
-      .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody .form-check {
-        padding-left: 0; }
-      .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody .checkbox-cell .form-check-input {
-        position: static;
-        margin-left: 0; } }
+          padding: 0.25rem 0.75rem 0.5rem;
+          border-top: none;
+          text-align: left !important;
+          position: relative;
+          word-break: break-word; }
+          .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody td:after {
+            display: block;
+            clear: both;
+            content: ""; }
+          .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody td.checkbox-cell {
+            width: auto; }
+        .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody td.checkall {
+          position: absolute; }
+        .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody td.checkmargin {
+          margin-left: 40px; }
+        .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody .header {
+          display: block !important;
+          font-weight: bold; }
+        .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody .hidecell {
+          display: none; }
+        .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody .float-right {
+          float: none !important; }
+        .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody .form-check-input {
+          margin: 5px 0 0; }
+        .tiki #col1 .table-responsive.large-table .table:not(.tablesorter) tbody .form-check {
+          padding-left: 0; } }
 
 .article .actions form {
   display: inline; }
