--- a/themes/base_files/scss/_tiki-tabs_and_tables.scss
+++ b/themes/base_files/scss/_tiki-tabs_and_tables.scss
@@ -123,64 +123,61 @@ td.url{
 
 @media only screen and (max-width: breakpoint-max(sm)) {
 	.table-expand-toggle { display: none; }
-	.toggle-table {
+	.toggle-table-wrap {
 //		position: absolute; right: 5px; margin-top: -50px;
 		width: 100%; text-align: right;
 		.btn-link {
-			padding-top: 0; padding-bottom: 0;
+			padding: 0; padding-left: 0.75rem;
 			font-weight: 600; font-size: 1.8em; text-decoration: none !important;
 		}
 	}
 
-	.tiki #col1 .table-responsive.large-table {
-		.table:not(.tablesorter) {
-			thead, tbody {
-				th:not(.selectall) {
-					position: absolute;
-					top: -9999px;
-					left: -9999px;
+	.tiki #col1 .table-responsive {
+		.form-check-input { position: static; margin-left: 0; }
+		&.large-table {
+			.table:not(.tablesorter) {
+				thead, tbody {
+					th:not(.selectall) {
+						position: absolute;
+						top: -9999px;
+						left: -9999px;
+					}
 				}
-			}
 
-			thead tr {
-				display: block;
-				padding: 0.5rem 0 0;
-				background-color: $table-accent-bg;
-			}
-
-			tbody {
-				tr { display: block; border-bottom: 1px solid $border-color; }
-				tr:not(:nth-child(1)) { padding: 0.5rem 0; }
-				> tr.active { display: none; }
-
-				td {
+				thead tr {
 					display: block;
-					padding: 0.25rem 0.75rem 0.5rem;
-					border-top: none;
-					text-align: left !important;
-					position: relative;
-					word-break: break-word;
-					&:after {
-						display: block;
-						clear: both;
-						content: "";
-					}
-					&.checkbox-cell { width: auto; }
-//					&.action:not(:nth-child(1)) { display: none; }
+					padding: 0.5rem 0 0;
+					background-color: $table-accent-bg;
 				}
 
-				td.checkall { position: absolute; }
-				td.checkmargin { margin-left: 40px; }
-				.header { display: block !important; font-weight: bold; }
-				.hidecell { display: none; }
-				.float-right { float: none !important; }
-				.form-check-input { margin: 5px 0 0; }
-				.form-check { padding-left: 0; }
-				.checkbox-cell {
-					.form-check-input {
-						position: static;
-						margin-left: 0;
+				tbody {
+					tr { display: block; border-bottom: 1px solid $border-color; }
+					tr:not(:nth-child(1)) { padding: 0.5rem 0; }
+					> tr.active { display: none; }
+
+					td {
+						display: block;
+						padding: 0.25rem 0.75rem 0.5rem;
+						border-top: none;
+						text-align: left !important;
+						position: relative;
+						word-break: break-word;
+						&:after {
+							display: block;
+							clear: both;
+							content: "";
+						}
+						&.checkbox-cell { width: auto; }
+	//					&.action:not(:nth-child(1)) { display: none; }
 					}
+
+					td.checkall { position: absolute; }
+					td.checkmargin { margin-left: 40px; }
+					.header { display: block !important; font-weight: bold; }
+					.hidecell { display: none; }
+					.float-right { float: none !important; }
+					.form-check-input { margin: 5px 0 0; }
+					.form-check { padding-left: 0; }
 				}
 			}
 		}
